--- a/app.json
+++ b/app.json
@@ -1,13 +1,24 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/mypage/mypage",
     "pages/transaction-list/transactionList",
+    "pages/transaction-list/info-upload",
+    "pages/find/findDetails",
+    "pages/find/find",
+    "pages/personnel-management/personnel-management",
     "pages/works/works",
+    "pages/map/map",
+    "pages/mypage/mypage",
     "pages/logs/logs",
     "pages/message-list/messageList",
-    "pages/find/find"
+    "pages/password/password",
+    "pages/works/workDetails"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
